more last second edits

--- a/paper/FW_cogsci_format.tex
+++ b/paper/FW_cogsci_format.tex
@@ -22,7 +22,7 @@
 
 %ABSTRACT
 \begin{abstract}
-The first word, an intimate moment between child and caretaker, exhibits a tremendous amount of variability in semantic categorization, phonological complexity, and age of onset. Through several large datasets of parental report of children’s first words, we investigate patterns in first word production, including the age of onset, distribution of MB-CDI categories, and first words in relation to parental input. In three analyses, we explore the timecourse and distribution of children’s first recognizable language productions. We find that, contra conventional wisdom, more than 75% of children in our datasets produce a first word by their first birthday. In our second analysis, we find that children produce more words in certain semantic categories. Finally, we take all the unique occurrences of words across the datasets, and try to predict first word production via parental input taken from the CHILDES corpus. Overall, we find that parental report of a child’s first word yields rich and consistent data on what is typically an unobservable dyadic moment, and that the words children produce first may be affected by semantic differences as well as by parental input.
+The first word, an intimate moment between child and caretaker, exhibits a tremendous amount of variability in semantic categorization, phonological complexity, and age of onset. Through several large datasets of parental report of children’s first words, we investigate patterns in first word production, including the age of onset, distribution of MB-CDI categories, and first words in relation to parental input. In three analyses, we explore the timecourse and distribution of children’s first recognizable language productions. We find that, contra conventional wisdom, more than 75 percent of children in our datasets produce a first word by their first birthday. In our second analysis, we find that children produce more words in certain semantic categories. Finally, we take all the unique occurrences of words across the datasets, and try to predict first word production via parental input taken from the CHILDES corpus. Overall, we find that parental report of a child’s first word yields rich and consistent data on what is typically an unobservable dyadic moment, and that the words children produce first may be affected by semantic differences as well as by parental input.
 
 \textbf{Keywords:}
 language acquisition
@@ -101,12 +101,13 @@ Across the 4 datasets, we grouped data (N = 3173) by age and by dataset. Twenty-
 \end{figure}
 
 Before 12 months, approximately 75% of children have produced a first word, and we see a gradual but consistent increase as the child ages as expected. The plot of the Mechanical Turk data, the largest dataset, is most likely the most representative of child word production, while the other datasets asymptope fairly quickly between about 14 and 17 months. 
-These data suggest that children are speaking before 12 months relatively frequently. To discern whether there might be a bias on behalf of parents of older children to report a younger first word, we ran a (SOMETHING test - regression?), but did not receive a significant result. \par
+These data suggest that children are speaking before 12 months relatively frequently. To discern whether there might be a bias on behalf of parents of older children to report a younger first word, we ran a (TEST), but did not receive a significant result (p > XX). \par
 Why are some children producing language earlier than other children, and what does this reveal about the relationship between their conceptual and linguistic development? When children produce early language (<12 months) as opposed to a later one, are they choosing to produce conceptually different words than children who speak later? Or, are conceptual and linguistic development more closely linked? In our next analysis, we examined the CDI category frequencies of children's first words to explore whether very early first words differ conceptually from later-produced words. 
 
 \subsection{CDI Categories} 
 Previous work has established that the CDI normative categories are not equally represented in first word production (Fenson et al., 1994). If early word producers have a different distribution of CDI categories, this might suggest that linguistic development is loosely related to conceptual development, and that a later producer is sampling from a larger array of words that are conceptually available to her.\par
 In this analysis, CDI categories were assigned by the researcher based on the MB-CDI parental report form, and validated across datasets. In instances where words did not appear on the MB-CDI,  categories were assigned ad hoc and validated across datasets for consistency. Ninety-one children were excluded because their first word was unable to categorized. We grouped the data by dataset, and performed an age split at 12 months. Figure 2 shows the frequencies of the CDI categories split by age and grouped by dataset.
+
 %FIGURE 2
 \begin{figure}[t]
 \begin{center}
@@ -115,9 +116,11 @@ In this analysis, CDI categories were assigned by the researcher based on the MB
 \caption{Figure 2: Histogram of CDI category frequencies across datasets.}
 \end{figure}
 
-Distributions of CDI category frequency across all 4 datasets almost identical. 
+Distributions of CDI category frequency across all 4 datasets almost identical. We constructed a linear model, and did not find an effect of dataset on CDI category distribution (p > XX). Although more children are included in the > 12 month group, the distributions of the CDI category representations remain almost identical. /par 
+Animals, Games and Routines, Toys, and People, followed closely by Food and Drink are frequent first word categories, and seem to be equally compelling as a first word for both early and later producers. Data for later speakers in Wordbank is sparse, because children were selected for this analysis when they were producing exactly one word, according to parental report on the MB-CDI. Only (XX) children produced only exactly word in this group. \par 
+Despite producing a first word during different points in their conceptual development, both early and later producers are choosing to speak about the same semantic categories. This would suggest that children's linguistic and conceptual development are more intimately related, and the production of a first word is possibly not just the result of a cognitive shift, but an ability to produce and form words. \par
+However, out of all the sets of possible first words, why are children consistently choosing to produce words predominantly from these semantic categories? What is tipping the balance in favor of these particular words? Some potential factors are frequency of parental input, the phonetic probability and ease of production, and potentially just relevance to a developing child. In the next analysis, we examine all of these within CDI categories to attempt to untangle what causes the measure of consistency we observe in first word variability.
 
-**NOTE TO ROSE** - I think we should also put in the word-item analyses for CDM and Turk here - not only are the conceptual categories the same, the words within those categories are the same?? This seems reasonable!
 
 - Describe analyses
 - Details of stats- 
