--- a/paper/FW_cogsci_format.tex
+++ b/paper/FW_cogsci_format.tex
@@ -22,7 +22,7 @@
 
 %ABSTRACT
 \begin{abstract}
-The first word, an intimate moment between child and caretaker, exhibits a tremendous amount of variability in semantic categorization, phonological complexity, and age of onset. Through several large datasets of parental report of children’s first words, we investigate patterns in first word production, including the age of onset, distribution of MB-CDI categories, and first words in relation to parental input. In three analyses, we explore the timecourse and distribution of children’s first recognizable language productions. We find that, contra conventional wisdom, more than 75 percent of children in our datasets produce a first word by their first birthday. In our second analysis, we find that children produce more words in certain semantic categories. Finally, we take all the unique occurrences of words across the datasets, and try to predict first word production via parental input taken from the CHILDES corpus. Overall, we find that parental report of a child’s first word yields rich and consistent data on what is typically an unobservable dyadic moment, and that the words children produce first may be affected by semantic differences as well as by parental input.
+The first word, an intimate moment between child and caretaker, exhibits a tremendous amount of variability in semantic categorization, phonological complexity, and age of onset. Through several large datasets of parental report of children’s first words, we investigate patterns in first word production, including the age of onset, distribution of MB-CDI categories, and first words in relation to parental input and phonological complexity. In three analyses, we explore the timecourse and distribution of children’s first recognizable language productions. We find that, contra conventional wisdom, more than 75 percent of children in our datasets produce a first word by their first birthday. In our second analysis, we find that children consistently produce more first words in certain semantic categories. Finally, we take all the unique occurrences of words across the datasets, and try to predict first word production via parental input taken from the CHILDES corpus and the words' phonetic probabilities. Overall, we find that parental report of a child’s first word yields rich and consistent data on what is typically an unobservable dyadic moment, and that consistencies in first word production across development may indicate a close relationship between conceptual and linguistic development.
 
 \textbf{Keywords:}
 language acquisition
@@ -30,7 +30,7 @@ language acquisition
 
 %%INTRODUCTION%%%%
 \section{Introduction}
-A child's first word is a pivotal moment in a child's development, the start of a verbal dialogue that will continue and develop over the course of a child's life. The first word is not only important because it marks the beginning of a child's productive language capabilities, but it also offers a small glimpse into the mind of an infant. A first utterance not only gives insight into what a child is willing to talk about, but also what a child is able to talk about, in terms of conceptual categories and phonological production. While there has been much research of the development of children's general vocabulary development (citation here), there has been little research done on a child's first word. This is understandable, as it is a discrete event almost exclusively involving only the parent and child. 
+A child's first word is a pivotal moment in a child's development, the start of a verbal dialogue that will continue and develop over the course of a child's life. The first word is not only important because it marks the beginning of a child's productive language capabilities, but it also offers a small glimpse into the mind of an infant. A first utterance gives insight into what a child is willing to talk about as well as what a child is able to talk about, both in terms of conceptual categories and phonological production. While there has been much research of the development of children's general vocabulary development (citation here), there has been little research done on a child's first word. This is understandable, as it is a discrete event almost exclusively involving only the parent and child. 
 - Paragraph - first word comprehension - Bergelson and Swingley
 - Paragraph - Why are we interested in first productions?
 - Paragraph - parent report - advantages and drawbacks 
@@ -38,7 +38,11 @@ A child's first word is a pivotal moment in a child's development, the start of 
 
 %%GENERAL DATA METHODS%%
 \section{General Data Collection Methods}
-Data for this study is comprised of 4 different datasets, each obtained from a different source. Three of the 4 datasets were drawn from surveys specifically designed for this study. The last dataset contains data from Wordbank, an online repository of data from the MacArthur-Bates Communicative Development Inventories, a widely-used parent-report vocabulary checklist (Fenson et al., 2007). 
+Data for this study is comprised of four different datasets, each obtained from a different source. Three of the four datasets were drawn from surveys specifically designed for this study. The last dataset contains data from Wordbank, an online repository of data from the MacArthur-Bates Communicative Development Inventories (MB-CDI), a widely-used parent-report vocabulary checklist (Fenson et al., 2007).\\
+We specifically targeted different populations in our selections of data sources. The diversity of these four datasets encouraged an accurate representation of a child's first words, with each data source contributing its own set of advantages and drawbacks to the complete dataset. The first dataset source,  parents subscribed to The Children's Discovery Museum (CDM) mailing list, was chosen for collection because these parents were an ethnically diverse population with a higher education level than the general population, potentially leading to more accurate responses. For our next data source we targeted he Amazon Mechanical Turk(MTurk) population. This community is diverse in terms of age, gender, education level, and socio-economic status (SES), and was chosen because it is more representative of the general population.\\
+To complement our data from the general population, we next collected first word data from parents in the Psycholinguistic community. This population was specificaly selected for its familiarity with the subject as well as for their highly accurate diary records. However, this population ended up being very small (N = 58). \\
+Our final dataset, drawn from Wordbank, was chosen because datapoints came from the MB-CDI, which is typically filled out closer in time to when the child produced her first word, potentially yielding more accurate reports. A potential confound of the MB-CDI is that it may have a demand characteristic encouraging parents to report their children producing some word, as well as containing a somewhat limited set of potential words. \\
+Overall, these methods of parental report yielded consistent and rich data with minimal time investment on behalf of the parent. However, as with most self-report measures, our surveys did have some disadvantages. While in every data collection we tried to stress that a first word was defined as a consistent set of sounds referring to the same referent across many contextual frames, we have no way of validating the parental report. Another issue was standardization of the child's first word, especially in the MTurk dataset, discussed below. \\
 
 %CDM
 \section{Dataset 1: Children's Discovery Museum Survey}
@@ -89,7 +93,7 @@ Data were handled similarly to Datasets 1 and 2.
 \section{Analyses}
 
 \subsection{Age} 
-Conventional wisdom generally cites 12 months as the harbinger of the first word (Citation here). However, a child's first word is almost exclusively heard by a parent or other caretaker, and next to impossible to capture in a lab setting. However, that milestone is subject to the extreme variability in early language production (Fenson, 1994) and the potential pitfalls of parental memory (as discussed above). Given the possibility of very early noun comprehension (Bergelson and Swingley), we wished to explore the development of first word production, especially prior to 12 months.  \par
+Conventional wisdom generally cites 12 months as the harbinger of the first word (Citation here). However, a child's first word is almost exclusively heard by a parent or other caretaker, and next to impossible to capture in a lab setting. However, that milestone is subject to the extreme variability in early language production (Fenson, 1994) and the potential pitfalls of parental memory (as discussed above). Given the possibility of very early noun comprehension (Bergelson and Swingley), we wished to explore the development of first word production, especially prior to 12 months.  \\
 Across the 4 datasets, we grouped data (N = 3173) by age and by dataset. Twenty-one children were excluded for not having spoken yet (M age  = 2.7 mo, median = 2 mo). We then plotted the cumulative probability of a child having produced a first word as a function of their age (Figure 1).
 
 %FIGURE 1
@@ -101,11 +105,11 @@ Across the 4 datasets, we grouped data (N = 3173) by age and by dataset. Twenty-
 \end{figure}
 
 Before 12 months, approximately 75% of children have produced a first word, and we see a gradual but consistent increase as the child ages as expected. The plot of the Mechanical Turk data, the largest dataset, is most likely the most representative of child word production, while the other datasets asymptope fairly quickly between about 14 and 17 months. 
-These data suggest that children are speaking before 12 months relatively frequently. To discern whether there might be a bias on behalf of parents of older children to report a younger first word, we ran a (TEST), but did not receive a significant result (p > XX). \par
+These data suggest that children are speaking before 12 months relatively frequently. To discern whether there might be a bias on behalf of parents of older children to report a younger first word, we ran a (TEST), but did not receive a significant result (p > XX). \\
 Why are some children producing language earlier than other children, and what does this reveal about the relationship between their conceptual and linguistic development? When children produce early language (<12 months) as opposed to a later one, are they choosing to produce conceptually different words than children who speak later? Or, are conceptual and linguistic development more closely linked? In our next analysis, we examined the CDI category frequencies of children's first words to explore whether very early first words differ conceptually from later-produced words. 
 
 \subsection{CDI Categories} 
-Previous work has established that the CDI normative categories are not equally represented in first word production (Fenson et al., 1994). If early word producers have a different distribution of CDI categories, this might suggest that linguistic development is loosely related to conceptual development, and that a later producer is sampling from a larger array of words that are conceptually available to her.\par
+Previous work has established that the CDI normative categories are not equally represented in first word production (Fenson et al., 1994). If early word producers have a different distribution of CDI categories, this might suggest that linguistic development is loosely related to conceptual development, and that a later producer is sampling from a larger array of words that are conceptually available to her.\\
 In this analysis, CDI categories were assigned by the researcher based on the MB-CDI parental report form, and validated across datasets. In instances where words did not appear on the MB-CDI,  categories were assigned ad hoc and validated across datasets for consistency. Ninety-one children were excluded because their first word was unable to categorized. We grouped the data by dataset, and performed an age split at 12 months. Figure 2 shows the frequencies of the CDI categories split by age and grouped by dataset.
 
 %FIGURE 2
@@ -116,16 +120,17 @@ In this analysis, CDI categories were assigned by the researcher based on the MB
 \caption{Figure 2: Histogram of CDI category frequencies across datasets.}
 \end{figure}
 
-Distributions of CDI category frequency across all 4 datasets almost identical. We constructed a linear model, and did not find an effect of dataset on CDI category distribution (p > XX). Although more children are included in the > 12 month group, the distributions of the CDI category representations remain almost identical. /par 
-Animals, Games and Routines, Toys, and People, followed closely by Food and Drink are frequent first word categories, and seem to be equally compelling as a first word for both early and later producers. Data for later speakers in Wordbank is sparse, because children were selected for this analysis when they were producing exactly one word, according to parental report on the MB-CDI. Only (XX) children produced only exactly word in this group. \par 
-Despite producing a first word during different points in their conceptual development, both early and later producers are choosing to speak about the same semantic categories. This would suggest that children's linguistic and conceptual development are more intimately related, and the production of a first word is possibly not just the result of a cognitive shift, but an ability to produce and form words. \par
+Distributions of CDI category frequency across all 4 datasets almost identical. We constructed a linear model, and did not find an effect of dataset on CDI category distribution (p > XX). Although more children are included in the > 12 month group, the distributions of the CDI category representations remain almost identical. \\
+Animals, Games and Routines, Toys, and People, followed closely by Food and Drink are frequent first word categories, and seem to be equally compelling as a first word for both early and later producers. Data for later speakers in Wordbank is sparse, because children were selected for this analysis when they were producing exactly one word, according to parental report on the MB-CDI. Only (XX) children produced only exactly word in this group. \\
+Despite producing a first word during different points in their conceptual development, both early and later producers are choosing to speak about the same semantic categories. This would suggest that children's linguistic and conceptual development are more intimately related, and the production of a first word is possibly not just the result of a cognitive shift, but an ability to produce and form words. \\
 However, out of all the sets of possible first words, why are children consistently choosing to produce words predominantly from these semantic categories? What is tipping the balance in favor of these particular words? Some potential factors are frequency of parental input, the phonetic probability and ease of production, and potentially just relevance to a developing child. In the next analysis, we examine all of these within CDI categories to attempt to untangle what causes the measure of consistency we observe in first word variability.
 
 
 - Describe analyses
 - Details of stats- 
 - Differences across studies
-Consistent with previous work, we observe first words being drawn from certain CDI categories over others. We find that Animal, Games and Routines, Toy, and People words are more frequently first productions for both older and younger children, and that these patterns seem to be consistent across development. \par
+Consistent with previous work
+, we observe first words being drawn from certain CDI categories over others. We find that Animal, Games and Routines, Toy, and People words are more frequently first productions for both older and younger children, and that these patterns seem to be consistent across development. \\
 These data support previous findings on CDI category analyses of early language production 
 - Data suggests
 
