--- a/paper/FW_cogsci_format.tex
+++ b/paper/FW_cogsci_format.tex
@@ -48,7 +48,7 @@ Overall, these methods of parental report yielded consistent and rich data with 
 \section{Dataset 1: Children's Discovery Museum Survey}
 
 \subsection{Participants}
-We sent out a brief survey on children’s first words to subscribed members of a large local children’s museum. We received 502 responses to our survey (215 female, 285 male, and 2 with no reported gender; M age = 11 mo, median = 10 mo). Due to the diversity of the San Jose community, several of the first word responses were not in English. Responses were translated into English where possible. Responses that were not able to be translated were excluded from further analysis (N = 1).
+We sent out a brief survey on children’s first words to subscribed members of a large local children’s museum. We received 502 responses to our survey (215 female, 285 male, and 2 with no reported gender; M age = 11 mo, median = 10 mo). Due to the diversity of the San Jose community, several of the first word responses were not in English. Responses were translated into English where possible. Responses that were not able to be translated were excluded from further analysis (N = 1). Guardian education level was not available for this population.
 
 \subsection{Methods}
 Parents completed a brief web-based survey (created with JavaScript and HTML). The survey asked parents to list their child’s first word (excluding “mama” and “dada”), what they thought word referred to, a description of the situation surrounding the first word, the child’s age at time of utterance (≤10 mo or younger, 11 mo, 12 mo, 13 mo, ≥14 mo), the child’s current age, and their gender. Parents answered for only one child in this survey.
@@ -60,7 +60,7 @@ Parents’ responses were standardized for ease of analysis. Data cleaning invol
 \section{Dataset 2: Amazon Mechanical Turk}
 
 \subsection{Participants}
-We recruited 1000 parents from Amazon Mechanical Turk to complete an updated survey on their children’s first words. We restricted the survey to parents in the United States. This survey allowed parents to answer for multiple children. We received 1671 responses (813 female, 858 male; M age = 10 mo, median = 10 mo). 21 children were excluded from subsequent analyses because they had not yet spoken (M age = 2.7 mo, median = 2 mo). Responses were translated into English when possible and required. Responses that were not able to be translated were excluded from further analysis (N = 1).
+We recruited 1000 parents from Amazon Mechanical Turk to complete an updated survey on their children’s first words. We restricted the survey to parents in the United States. This survey allowed parents to answer for multiple children. We received 1671 responses (813 female, 858 male; M age = 10 mo, median = 10 mo). 21 children were excluded from subsequent analyses because they had not yet spoken (M age = 2.7 mo, median = 2 mo). Responses were translated into English when possible and required. Responses that were not able to be translated were excluded from further analysis (N = 1). Guardian education levels were highly diverse (Ns as follows: Elementary = 3; Some high school = 26; High school = 308; Some college = 525; College = 553; Some graduate school = 42; Graduate school = 26). 
 
 \subsection{Methods}s
 This survey was an extended version of the previous one. They survey allowed for input for multiple children, and asked parents to list their highest education level, child's birth order, sex,  first word (excluding “mama” and “dada”), word type, addressee of the first word, word age (0 – 24+ months), current age (0 – 18+ years), word language, and home language.  Responses were validated as the survey was completed, reducing the likelihood of erroneous or false responses. 
@@ -75,7 +75,7 @@ Data were handled as in Dataset 1. Due to the larger sample size, more phonologi
 We sent out a brief survey on children's first words to subscribed members of a Psycholinguist listserv. We received 52 responses from this survey (26 female, 26 male; M age = 11.16 mo, median 11 mo).
 
 \subsection{Methods}
-Questions included on the survey were: The approximate phonological form of the  first word, the age of the utterance, when the parent recorded this (if at all), the child’s sex, the target word, the child’s birth order (first or later born), and the child’s current age. 
+Questions included on the survey were: The approximate phonological form of the first word, the age of the utterance, when the parent recorded this (if at all), the child’s sex, the target word, the child’s birth order (first or later born), and the child’s current age. 
 
  \subsection{Data processing}
 Data were handled similarly to Datasets 1 and 2. 
@@ -84,6 +84,7 @@ Data were handled similarly to Datasets 1 and 2.
 \section{Dataset 4: MB-CDI Wordbank}
 
 \subsection{Participants}
+From all available data on Wordbank, we selected 76 children whose parents reported as producing exactly one word (31 female, 45 male, M age = 10.63 mo, median = 11 mo). Guardian education levels were fairly diverse (Ns as follows: Some high school = 4; High school = 24; Some college = 21; College = 17; Some graduate school = 1; Graduate school = 9). 
 
 \subsection{Methods}
 
