--- a/paper/FW_cogsci_format.tex
+++ b/paper/FW_cogsci_format.tex
@@ -99,7 +99,7 @@ We do not find that later producers are sampling words from a different or more 
 
 \subsection{Age} 
 Conventional wisdom generally cites 12 months as the harbinger of the first word (Citation here). However, a child's first word is almost exclusively heard by a parent or other caretaker, and next to impossible to capture in a lab setting. However, that milestone is subject to the extreme variability in early language production (Fenson, 1994) and the potential pitfalls of parental memory (as discussed above). Given the possibility of very early noun comprehension (Bergelson and Swingley), we wished to explore the development of first word production, especially prior to 12 months.  \\
-Across the 4 datasets, we grouped data (N = 3173) by age and by dataset. Twenty-one children were excluded for not having spoken yet (M age  = 2.7 mo, median = 2 mo). We then plotted the cumulative probability of a child having produced a first word as a function of their age (Figure 1).
+Across the 4 datasets, we grouped data by age and by dataset, $N_{total} = 3173$. Twenty-one children were excluded for not having spoken yet (M age  = 2.7 mo, median = 2 mo). We then plotted the cumulative probability of a child having produced a first word as a function of their age (Figure 1).
 
 %FIGURE 1
 \begin{figure}[t]
@@ -125,7 +125,7 @@ In this analysis, CDI categories were assigned by the researcher based on the MB
 \caption{Figure 2: Histogram of CDI category frequencies across datasets.}
 \end{figure}
 
-Distributions of CDI category frequency across all 4 datasets quite similar. We constructed a linear model, and did not find an effect of dataset on CDI category distribution (p > XX). Although more children are included in the > 12 month group, the distributions of the CDI category representations remain almost identical. \\
+Distributions of CDI category frequency across all 4 datasets look quite similar. We constructed a linear model, and did not find an effect of dataset on CDI category distribution (p > XX). Although more children are included in the > 12 month group, the distributions of the CDI category representations remain almost identical. \\
 Animals, Games and Routines, Toys, and People, followed closely by Food and Drink are frequent first word categories, and seem to be equally compelling as a first word for both early and later producers. Data for later speakers in Wordbank is sparse, because children were selected for this analysis when they were producing exactly one word, according to parental report on the MB-CDI. Only (XX) children produced only exactly word in this group. \\
 Despite producing a first word during different points in their conceptual development, both early and later producers are choosing to speak about the same semantic categories. This would suggest that children's linguistic and conceptual development are more intimately related, and the production of a first word is possibly not just the result of a cognitive shift, but an ability to produce and form words. \\
 However, out of all the sets of possible first words, why are children consistently choosing to produce words predominantly from these semantic categories? What is tipping the balance in favor of these particular words? Some potential factors are frequency of parental input, the phonetic probability and ease of production, and potentially just relevance to a developing child. In the next analysis, we examine all of these within CDI categories to attempt to untangle what causes the measure of consistency we observe in first word variability.
@@ -134,8 +134,7 @@ However, out of all the sets of possible first words, why are children consisten
 - Describe analyses
 - Details of stats- 
 - Differences across studies
-Consistent with previous work
-, we observe first words being drawn from certain CDI categories over others. We find that Animal, Games and Routines, Toy, and People words are more frequently first productions for both older and younger children, and that these patterns seem to be consistent across development. \\
+Consistent with previous work, we observe first words being drawn from certain CDI categories over others. We find that Animal, Games and Routines, Toy, and People words are more frequently first productions for both older and younger children, and that these patterns seem to be consistent across development. \\
 These data support previous findings on CDI category analyses of early language production 
 - Data suggests
 
